# FakeNewsDetection

./: README.md  app.py  main.py  pyproject.toml  replit.nix  trusteddomain.py
templates/: index.html
